package construccion.abstract_factory;

public interface AbstractFactory <T,A>{

    public T crear(A a);
}
