package construccion.abstract_factory.FAnimal;

public interface IAnimal {

    String getTipo();

    String makeSound();

}
