package construccion.abstract_factory.FColor;

public class Azul implements IColor {
    @Override
    public String getColor() {
        return "Azul";
    }
}
