package construccion.abstract_factory.FColor;

public interface IColor {

    public String getColor();
}
