package construccion.abstract_factory.FColor;

public class Rojo implements IColor {
    @Override
    public String getColor() {
        return "rojo";
    }
}
