package construccion.abstract_factory.enumeration;

public enum Animal {
    PATO,

    PERRO
}
