package construccion.abstract_factory.enumeration;

public enum Color {
    ROJO,
    AZUL
}
