package construccion.abstract_factory.enumeration;

public enum Factory {
    ANIMAL,
    COLOR
}
